--- a/.github/workflows/docker-hub-build-push-on-release.yml
+++ b/.github/workflows/docker-hub-build-push-on-release.yml
@@ -22,15 +22,18 @@ jobs:
           RELEASE_VERSION=${GITHUB_REF#refs/*/}
           echo "::set-output name=image_tag::${RELEASE_VERSION}"
           echo "Action image_tag=${RELEASE_VERSION}"
-          
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+        
+      - name: Install buildx
+        uses: docker/setup-buildx-action@v1.6.0
+        
       - name: Login to docker hub
         uses: docker/login-action@v1.13.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          
-      - name: Install buildx
-        uses: docker/setup-buildx-action@v1.6.0
         
       - name: Build and push ${{ github.repository }}:${{ steps.git.outputs.image_tag }}
         uses: docker/build-push-action@v2.9.0
