--- a/.github/workflows/docker-hub-build-push-on-release.yml
+++ b/.github/workflows/docker-hub-build-push-on-release.yml
@@ -34,6 +34,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1.12.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ github.token }}
         
       - name: Build and push ${{ github.repository }}:${{ steps.git.outputs.image_tag }}
         uses: docker/build-push-action@v2.9.0
@@ -43,6 +50,8 @@ jobs:
           tags: |
             ${{ github.repository }}:${{ steps.git.outputs.image_tag }}
             ${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:${{ steps.git.outputs.image_tag }}
+            ghcr.io/${{ github.repository }}:latest
 
       - name: Update dockerhub description
         uses: peter-evans/dockerhub-description@v2.4.3
