--- a/.github/workflows/docker-hub-build-push-on-push.yml
+++ b/.github/workflows/docker-hub-build-push-on-push.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  PLATFORMS: "linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6,linux/s390x"
+  PLATFORMS: "linux/amd64,linux/arm64,linux/arm/v7"
   
 jobs:
   build_and_push:
