--- a/.github/workflows/docker-hub-build-push-on-release.yml
+++ b/.github/workflows/docker-hub-build-push-on-release.yml
@@ -5,7 +5,7 @@ on:
     types: # This configuration does not affect the page_build event above
       - created
 env:
-  PLATFORMS: "linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6,linux/s390x"
+  PLATFORMS: "linux/amd64,linux/arm64,linux/arm/v7"
   
 jobs:
   build_and_push:
