rename workflow and deprecate ::set-output.

--- a/.github/workflows/on-push-main.yml
+++ b/.github/workflows/on-push-main.yml
@@ -1,9 +1,10 @@
-name: Build docker image and push to docker hub on release
+name: On push to main
 
 on:
-  release:
-    types: # This configuration does not affect the page_build event above
-      - created
+  push:
+    branches:
+      - main
+
 env:
   PLATFORMS: "linux/amd64,linux/arm64,linux/arm/v7"
   
@@ -19,9 +20,8 @@ jobs:
         id: git
         shell: bash
         run: |
-          RELEASE_VERSION=${GITHUB_REF#refs/*/}
-          echo "::set-output name=image_tag::${RELEASE_VERSION}"
-          echo "Action image_tag=${RELEASE_VERSION}"
+          RELEASE_VERSION="dev-$(date +%s)"
+          echo "image_tag=${RELEASE_VERSION}" >> ${GITHUB_OUTPUT}
       
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -49,14 +49,7 @@ jobs:
           push: true
           tags: |
             ${{ github.repository }}:${{ steps.git.outputs.image_tag }}
-            ${{ github.repository }}:latest
+            ${{ github.repository }}:development
             ghcr.io/${{ github.repository }}:${{ steps.git.outputs.image_tag }}
-            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:development
 
-      - name: Update dockerhub description
-        uses: peter-evans/dockerhub-description@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          repository: ${{ github.repository }}
-          short-description: ${{ github.event.repository.description }}
