--- a/.github/workflows/on-push-main.yml
+++ b/.github/workflows/on-push-main.yml
@@ -15,43 +15,40 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Extract tag string
-        id: git
-        shell: bash
-        run: |
-          RELEASE_VERSION="dev-$(date +%s)"
-          echo "image_tag=${RELEASE_VERSION}" >> ${GITHUB_OUTPUT}
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-        
-      - name: Install buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2.7.0
-        
       - name: Login to docker hub
         uses: docker/login-action@v2.2.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2.2.0
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ github.token }}
-
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ${{ github.repository }}
+            ghcr.io/${{ github.repository }}
+          tags: |
+            type=raw,value=dev-{{date 'X'}}
+            type=raw,value=development
+            type=ref,event=branch
+            type=edge,branch=main
       - name: Build and push ${{ github.repository }}:${{ steps.git.outputs.image_tag }}
         uses: docker/build-push-action@v4.1.1
         with:
           platforms: ${{ env.PLATFORMS }}
           push: true
-          tags: |
-            ${{ github.repository }}:${{ steps.git.outputs.image_tag }}
-            ${{ github.repository }}:development
-            ghcr.io/${{ github.repository }}:${{ steps.git.outputs.image_tag }}
-            ghcr.io/${{ github.repository }}:development
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
   clean-ghcr:
     name: Delete old dev container images
