--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -14,48 +14,35 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        
-      - name: Extract tag string
-        id: git
-        shell: bash
-        run: |
-          RELEASE_VERSION=${GITHUB_REF#refs/*/}
-          echo "image_tag=${RELEASE_VERSION}" >> ${GITHUB_OUTPUT}
-      
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-        
-      - name: Install buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2.7.0
-        
       - name: Login to docker hub
         uses: docker/login-action@v2.2.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2.2.0
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ github.token }}
-        
-      - name: Build and push ${{ github.repository }}:${{ steps.git.outputs.image_tag }}
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ${{ github.repository }}
+            ghcr.io/${{ github.repository }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=tag
+      - name: Build and push
         uses: docker/build-push-action@v4.1.1
         with:
           platforms: ${{ env.PLATFORMS }}
           push: true
-          tags: |
-            ${{ github.repository }}:${{ steps.git.outputs.image_tag }}
-            ${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:${{ steps.git.outputs.image_tag }}
-            ghcr.io/${{ github.repository }}:latest
-
-      - name: Update dockerhub description
-        uses: peter-evans/dockerhub-description@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          repository: ${{ github.repository }}
-          short-description: ${{ github.event.repository.description }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
