--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -46,3 +46,4 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          provenance: false
