[workflow] exclude dashboard and examples from on-push trigger.

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -4,7 +4,12 @@ on:
   push:
     branches-ignore:
       - release
-    workflow_dispatch:
+    paths-ignore:
+      - 'dashboard/*'
+      - 'examples/*'
+      - 'README.md'
+      - 'LICENSE'
+  workflow_dispatch:
 
 env:
   PLATFORMS: "linux/amd64,linux/arm64,linux/arm/v7"
