--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -83,5 +83,6 @@ jobs:
       #     keep-at-least: 0
       #     untagged-only: True
       #     skip-tags: latest, development
-          dry-run: False
+      #     dry-run: False
+
 
