--- a/examples/docker-abuseipdb/docker-compose.yml
+++ b/examples/docker-abuseipdb/docker-compose.yml
@@ -1,21 +1,26 @@
 version: '3.5'
 services:
-
   endlessh:
     container_name: endlessh
     image: shizunge/endlessh-go:latest
     restart: unless-stopped
-    #user: root
     command:
       - "-logtostderr"
       - "-v=1"
-      - -enable_abuseipdb
-      - -abuse_ipdb_api_key ""
+      - "-enable_abuseipdb"
     networks:
       - example_network
     ports:
-      - 2222:2222 # SSH port
-      - 127.0.0.1:2112:2112 # Prometheus metrics port
+      - "2222:2222" # SSH port
+      - "127.0.0.1:2112:2112" # Prometheus metrics port
+    secrets:
+      - abuseipdb_api_key
+    environment:
+      ABUSE_IPDB_API_KEY_FILE: /run/secrets/abuseipdb_api_key
 
 networks:
   example_network:
+
+secrets:
+  abuseipdb_api_key:
+    external: true # Ensure the secret is created beforehand with 'docker secret create'
