--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -1,4 +1,4 @@
-name: On push
+name: On pull request
 
 on:
   pull_request:
@@ -16,7 +16,7 @@ env:
   
 jobs:
   build_container_image:
-    name: Build and push Docker image
+    name: Build Docker image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
