[workflow] Ignore dependabot on push

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -3,7 +3,8 @@ name: On push
 on:
   push:
     branches-ignore:
-      - release
+      - 'release'
+      - 'dependabot/**'
     paths-ignore:
       - 'dashboard/*'
       - 'examples/*'
